--- a/superset_text.yml
+++ b/superset_text.yml
@@ -16,9 +16,13 @@
 # under the License.
 
 
-# To set the images of your preferred database, you may create a mapping here with engine and locations of the relevant images. The image can be hosted locally inside your static/file directory or online (e.g. S3)
+# To set the images of your preferred database,
+#  you may create a mapping here with engine and locations of the relevant images.
+#  The image can be hosted locally inside your static/file directory or online (e.g. S3)
 
-# DB_IMAGES:
-#   postgresql: "path/to/image/postgres.jpg"
-#   bigquery: "path/to/s3bucket/bigquery.jpg"
-#   snowflake: "path/to/image/snowflake.jpg"
+DB_IMAGES:
+  postgresql: "/static/assets/images/database_images/postgres.png"
+  mysql: "/static/assets/images/database_images/mysql.png"
+  hive: "/static/assets/images/database_images/hive.png"
+  spark: "/static/assets/images/database_images/spark.png"
+  sqlite: "/static/assets/images/database_images/sqlite.png"
