MySQL Auto connection

--- a/superset_text.yml
+++ b/superset_text.yml
@@ -16,9 +16,13 @@
 # under the License.
 
 
-# To set the images of your preferred database, you may create a mapping here with engine and locations of the relevant images. The image can be hosted locally inside your static/file directory or online (e.g. S3)
+# To set the images of your preferred database,
+#  you may create a mapping here with engine and locations of the relevant images.
+#  The image can be hosted locally inside your static/file directory or online (e.g. S3)
 
 DB_IMAGES:
-  "PostgreSQL": "/static/assets/images/database_images/postgresql.png"
-  "MySQL": "/static/assets/images/database_images/mysql.png"
-  "SQLite": "/static/assets/images/database_images/sqlite.png"
+  postgresql: "/static/assets/images/database_images/postgres.png"
+  mysql: "/static/assets/images/database_images/mysql.png"
+  hive: "/static/assets/images/database_images/hive.png"
+  spark: "/static/assets/images/database_images/spark.png"
+  sqlite: "/static/assets/images/database_images/sqlite.png"
