Add dbModel selection by name & change image selection key

--- a/superset_text.yml
+++ b/superset_text.yml
@@ -19,6 +19,6 @@
 # To set the images of your preferred database, you may create a mapping here with engine and locations of the relevant images. The image can be hosted locally inside your static/file directory or online (e.g. S3)
 
 DB_IMAGES:
-  postgresql: "/static/assets/images/database_images/postgresql.png"
-  mysql: "/static/assets/images/database_images/mysql.png"
-  sqlite: "/static/assets/images/database_images/sqlite.png"
+  "PostgreSQL": "/static/assets/images/database_images/postgresql.png"
+  "MySQL": "/static/assets/images/database_images/mysql.png"
+  "SQLite": "/static/assets/images/database_images/sqlite.png"
